# hivemind

./: .gitignore  BaseRole.h  CMakeLists.txt  Camera.h  GameRunner.cpp  GameRunner.h  GridMap.cpp  GridMap.h  GroundNode.h  Human.cpp  Human.h  Institution.cpp  Institution.h  Map.h  MapActor.cpp  MapActor.h  MapEntity.h  MapNode.h  MapPosition.h  Mesh.h  Pather.cpp  Pather.h  Robot.cpp  Robot.h  SparseMap.cpp  SparseMap.h  Structure.cpp  Structure.h  StructureNode.cpp  StructureNode.h  VisionMap.cpp  VisionMap.h  main.cpp
res/: constants.json  fragment.shader  fragmentShader.shader  manifest.json  renderer.json  ui.json  vertex.shader  vertexShader.shader
res/img/: priest.aseprite  soldier.aseprite
res/json/: manifest.json  renderer.json
res/json/spritesheets/: gorilla.json  priest.json  structure.json
res/json/tilesheets/: basic.json
res/shaders/: color.fragment.shader  fragment.shader  texture.fragment.shader  vertex.instanced.shader  vertex.shader
res/sprites/: entityinfobox.json  monkey.json  tree.json
src/: BaseRole.h  Camera.cpp  Camera.h  GameRunner.cpp  GameRunner.h  GameState.cpp  GameState.h  GridMap.cpp  GridMap.h  GroundNode.h  Human.cpp  Human.h  Institution.cpp  Map.h  MapActor.cpp  MapActor.h  MapEntity.h  MapNode.h  MapPosition.h  Mesh.h  Pather.cpp  Pather.h  PhysicsCollider.h  PhysicsIntegrator.cpp  PhysicsIntegrator.h  Prop.cpp  Prop.h  Structure.cpp  Structure.h  StructureNode.cpp  StructureNode.h  UserInterface.cpp  UserInterface.h  VisionMap.h  WorldMap.cpp  WorldMap.h  macros.h  main.cpp
src/collision/: Body.cpp  Body.h  Bound.h  Collider.cpp  Collider.h  CollisionNode.cpp  CollisionNode.h  Integrator.cpp  Integrator.h  PhysicsBody.cpp  PhysicsBody.h  PhysicsCollider.cpp  PhysicsCollider.h  Polygon.h  QuadTree.cpp  QuadTree.h  Rectangle.cpp  Rectangle.h  Shape.h
src/common/: Actor.h  Body.h  DoublyLinkedNode.h  Entity.cpp  Entity.h  LinkedNode.h  PlainEntity.cpp  PlainEntity.h  Rectangle.cpp  Rectangle.h  SchemaEntity.cpp  SchemaEntity.h  SchemaObject.cpp  SchemaObject.h  SchemaPrototype.cpp  SchemaPrototype.h  Stage.cpp  Stage.h  TopologicalNode.h  TreeNode.h
src/cuda/: CMakeLists.txt  collisionKernels.cu  main.cu
src/engine/: Collider.cpp  Collider.h  GameEntity.cpp  GameEntity.h  Integrator.cpp  Integrator.h  Interface.cpp  Interface.h  Person.cpp  Person.h  Scene.cpp  Scene.h  Scheduler.h  SimpleScheduler.cpp  SimpleScheduler.h  Stage.h  State.cpp  State.h  World.cpp  World.h
src/interface/: InterfaceNode.cpp  InterfaceNode.h
src/life/: Appendage.cpp  Appendage.h  Joint.cpp  Joint.h  Person.cpp  Person.h
src/pathing/: GridMap.cpp  GridMap.h  GridNode.cpp  GridNode.h  Map.h  MapNode.cpp  MapNode.h  MapPosition.h  Pather.cpp  Pather.h  QuadTree.cpp  QuadTree.h  TopologicalMap.cpp  TopologicalMap.h  TopologicalNode.h
src/render/: Camera.cpp  Camera.h  Drawable.h  Mesh.cpp  Mesh.h  MeshObject.h  MeshUtil.cpp  MeshUtil.h  RenderEntity.cpp  RenderEntity.h  RenderNode.cpp  RenderNode.h  RenderUtil.cpp  RenderUtil.h  Renderable.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h  SpriteCollection.cpp  SpriteCollection.h  SpritePrototype.cpp  SpritePrototype.h  SpriteSheet.cpp  SpriteSheet.h  TileSheet.cpp  TileSheet.h
src/society/: BaseRole.h  EconomicRole.cpp  EconomicRole.h  Institution.cpp  Institution.h  ProductionRole.cpp  ProductionRole.h  Recipe.h  ResourcePool.cpp  ResourcePool.h  ServiceRole.cpp  ServiceRole.h  Transaction.cpp  Transaction.h
src/state/: GameState.cpp  GameState.h
src/thread/: GameRunner.cpp  GameRunner.h
src/ui/: UIEntity.cpp  UIEntity.h  UINode.cpp  UINode.h  UserInterface.cpp  UserInterface.h
src/util/: FileUtil.cpp  FileUtil.h  MathUtil.cpp  MathUtil.h  MeshUtil.cpp  MeshUtil.h  RenderUtil.cpp  RenderUtil.h  SpriteUtil.cpp  SpriteUtil.h  StringUtil.cpp  StringUtil.h
src/world/: Actor.h  God.cpp  God.h  GridMap.cpp  GridMap.h  Human.cpp  Human.h  MapActor.cpp  MapActor.h  MapEntity.h  Person.cpp  Person.h  Prop.h  Recipe.cpp  Recipe.h  Resource.cpp  Resource.h  Role.cpp  Role.h  Skeleton.cpp  Skeleton.h  Structure.cpp  Structure.h  SuperTask.cpp  SuperTask.h  Task.cpp  Task.h  VisionMap.cpp  VisionMap.h  WorldActor.cpp  WorldActor.h  WorldEntity.cpp  WorldEntity.h  WorldMap.cpp  WorldMap.h
